// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeeInfo renders correctly 1`] = `
<View>
  <PeachText
    style={
      {
        "color": "#7D675E",
        "textAlign": "center",
      }
    }
  >
    label
  </PeachText>
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    2.12
     
    sat/vB
  </PeachText>
</View>
`;

exports[`FeeInfo renders correctly with error indication 1`] = `
<View>
  <PeachText
    style={
      {
        "color": "#7D675E",
        "textAlign": "center",
      }
    }
  >
    label
  </PeachText>
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
          "textAlign": "center",
        },
        {
          "color": "#F56522",
        },
      ]
    }
  >
    1
     
    sat/vB
  </PeachText>
</View>
`;
